test/TestPhases/importchecking/invalid/multiplecyclicprogramimport.blc
import mcpi "multiplecyclicprogramimport"
import mcpi2 "multiplecyclicprogramimport"

@[EntryPoint]
activity Main ()
    await true
end